- switch without network does not make sense
Changed files:
    openvswitch.service -> 1.3

--- a/openvswitch.service
+++ b/openvswitch.service
@@ -1,5 +1,6 @@
 [Unit]
 Description=Open vSwitch switch
+Requires=network.target
 After=network.target named.service remote-fs.target syslog.target
 
 [Service]
